force-app/main/default/objects/Expression_of_Interest__c/Expression_of_Interest__c.object-meta.xml
<CustomObject>
    <label>Expression of Interest</label>
    <nameField>
        <displayFormat>EOI-{000000}</displayFormat>
        <label>EOI Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expression of Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>