force-app/main/default/objects/Expression_of_Interest__c/fields/Agency_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name_2__c</fullName>
    <label>Agency Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>