force-app/main/default/objects/Expression_of_Interest__c/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Select Broker type record only.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Expression_of_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>