force-app/main/default/objects/Expression_of_Interest__c/fields/Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type__c</fullName>
    <label>Booking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker Sale</fullName>
            </value>
            <value>
                <fullName>Direct Sale</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
                <isActive>false</isActive>
                <label>Cancellation</label>
            </value>
            <value>
                <fullName>New Booking</fullName>
                <isActive>false</isActive>
                <label>New Booking</label>
            </value>
            <value>
                <fullName>Re-Sale</fullName>
                <isActive>false</isActive>
                <label>Re-Sale</label>
            </value>
            <value>
                <fullName>Transfer</fullName>
                <isActive>false</isActive>
                <label>Transfer</label>
            </value>
            <value>
                <fullName>Upgrade</fullName>
                <isActive>false</isActive>
                <label>Upgrade</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>