force-app/main/default/objects/Expression_of_Interest__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Buyer type accounts are visible.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Buyer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Expression_of_Interests1</relationshipName>
    <type>Lookup</type>
</CustomField>