force-app/main/default/objects/Expression_of_Interest__c/fields/Buyer_Type__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Type__c</fullName>
    <label>Buyer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
                <isActive>false</isActive>
                <label>Corporate</label>
            </value>
            <value>
                <fullName>Investor</fullName>
                <isActive>false</isActive>
                <label>Investor</label>
            </value>
            <value>
                <fullName>Joint</fullName>
                <isActive>false</isActive>
                <label>Joint</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>