force-app/main/default/objects/Expression_of_Interest__c/fields/EOI_Amount__c.field-meta.xml
<CustomField>
    <fullName>EOI_Amount__c</fullName>
    <label>EOI Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>