force-app/main/default/objects/Expression_of_Interest__c/fields/Exchange_Rate_To_AED__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_To_AED__c</fullName>
    <label>Exchange Rate To AED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>