force-app/main/default/objects/Expression_of_Interest__c/fields/Existing_Lead__c.field-meta.xml
<CustomField>
    <fullName>Existing_Lead__c</fullName>
    <label>Existing Lead?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>