force-app/main/default/objects/Expression_of_Interest__c/fields/Finance_Verified__c.field-meta.xml
<CustomField>
    <fullName>Finance_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Verified?</label>
    <type>Checkbox</type>
</CustomField>