force-app/main/default/objects/Expression_of_Interest__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <label>Floor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>