force-app/main/default/objects/Expression_of_Interest__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Expression of Interests</relationshipLabel>
    <relationshipName>Expression_of_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>