force-app/main/default/objects/Expression_of_Interest__c/fields/Mode_Of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Payments__c</fullName>
    <label>Mode Of Payments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Online Payment</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>Internal Transfer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>