force-app/main/default/objects/Expression_of_Interest__c/fields/POP_Reference__c.field-meta.xml
<CustomField>
    <fullName>POP_Reference__c</fullName>
    <label>POP Reference #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>