force-app/main/default/objects/Expression_of_Interest__c/fields/POP_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>POP_Transaction_Date__c</fullName>
    <label>POP Transaction Date</label>
    <type>Date</type>
</CustomField>