force-app/main/default/objects/Expression_of_Interest__c/fields/Preferred_Unit__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Unit__c</fullName>
    <label>Preferred Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>