force-app/main/default/objects/Expression_of_Interest__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Name</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipName>Expression_of_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>