force-app/main/default/objects/Expression_of_Interest__c/fields/Property_Unit__c.field-meta.xml
<CustomField>
    <fullName>Property_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Project_Name__c</field>
            <operation>equals</operation>
            <valueField>Property_Unit__c.Property__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Property_Unit__c</referenceTo>
    <relationshipLabel>Expression of Interests</relationshipLabel>
    <relationshipName>Expression_of_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>