force-app/main/default/objects/Expression_of_Interest__c/fields/Sales_Claimed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Claimed_Amount__c</fullName>
    <label>Sales Claimed Amount (AED)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>