force-app/main/default/objects/Expression_of_Interest__c/fields/Task_Count__c.field-meta.xml
<CustomField>
    <fullName>Task_Count__c</fullName>
    <label>Task Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>