force-app/main/default/objects/Expression_of_Interest__c/validationRules/EOI_If_Status_is_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>EOI_If_Status_is_Approved</fullName>
    <active>true</active>
    <description>If Status is Approved then only Finance Team can change the record.</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    TEXT(PRIORVALUE(Status__c)) = &quot;Verified&quot;,
    $User.Username &lt;&gt; &quot;noumanahmed159@gmail.com.kcdev&quot;
)</errorConditionFormula>
    <errorMessage>This record is Verified and cannot be modified.</errorMessage>
</ValidationRule>