force-app/main/default/objects/Expression_of_Interest__c/validationRules/EOI_If_Status_is_Rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>EOI_If_Status_is_Rejected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    TEXT(PRIORVALUE(Status__c)) = &quot;Rejected&quot;,
    TEXT(Status__c) &lt;&gt; &quot;Rejected&quot;
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>This EOI Record cannot be changed once it is set to Rejected.</errorMessage>
</ValidationRule>