force-app/main/default/objects/Expression_of_Interest__c/validationRules/POP_Transaction_date_cant_be_future.validationRule-meta.xml
<ValidationRule>
    <fullName>POP_Transaction_date_cant_be_future</fullName>
    <active>true</active>
    <description>POP Transaction date should not accept future date</description>
    <errorConditionFormula>POP_Transaction_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>POP_Transaction_Date__c</errorDisplayField>
    <errorMessage>POP Transaction date Can&apos;t be a Future Date.</errorMessage>
</ValidationRule>